--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openzeppelin-solidity",
+  "name": "zeppelin",
   "version": "1.12.0",
   "description": "Secure Smart Contract library for Solidity",
   "files": [
